# psbot0

./: Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
examples/: Makefile  league.c  losetm.c  pmoney.c  testing.c
gocr/: Makefile
gocr/man/: Makefile
gocr/src/: Makefile  Makefile.in  pgm2asc.c
scripts/: dpy99.sh  kill-dpy99.sh
src/: Makefile  capt.c  eval.c  gmtr.c  mocr.c  mocr.h  movs.c  psb0.c  psb0.h  psbot0.h  push.c  util.c  util.h
